--- a/pages/login/login.wxss
+++ b/pages/login/login.wxss
@@ -1,6 +1,16 @@
 /* pages/login/login.wxss */
 .login{
   width: 100%;
+  height: 100vh;
+  background: #4c00ff;
+  position: relative;
+}
+.bg{
+  position: absolute;
+ top:0;
+ left:0;
+
+  transform: rotate(110deg);
 }
 .text{
   width: 100%;
