--- a/pages/category/category.wxss
+++ b/pages/category/category.wxss
@@ -1,54 +1,70 @@
 /* pages/category/category.wxss */
-.category_img{
+/* .category:before{
+  content: '';
   position: fixed;
   top: 0;
-  left:0;
-  z-index: 1;
+  left: 0;
+  width: 300rpx;
+  height: 300rpx;
+  z-index:1;
+  background: url(../../images/background.png);
+} */
+/* .bg{
+position: absolute;
+top:-100rpx;
+left:-100rpx;
+z-index: -1;
+}
+.bg image{
+  transform: rotate(143deg);
+} */
+text{
+display: block;
+}
+.category_text .title{
+  letter-spacing: 4rpx;
+  font-weight: 100;
+  font-size:72rpx;
+  margin-top:30rpx;
+  box-sizing: border-box;
+  padding:0 30rpx;
+}
+.category_text .p{
+  letter-spacing: 3rpx;
+  font-weight: 200;
+  font-size:24rpx;
+  margin-top: 10rpx;
+  box-sizing: border-box;
+  padding:0 30rpx;
 }
 .category_list{
-  position: relative;
-  top:0;
-  left: 0;
-  z-index: 2;
-}
-.category_list::before{
-content: '';
-display: block;
-background:#000;
-width: 100%;
-height: 600rpx;
-opacity: .3;
+  display: flex;
+  flex-direction: row;
+  overflow: scroll;
+  overflow: auto;
 }
 .category_info{
-  width: 100%;
   box-sizing: border-box;
   padding:25rpx;
-  background:#fff;
 }
 .list{
   display: flex;
-  justify-content: space-between;
-  width: 100%;
-  height: 300rpx;
-  margin-bottom:25rpx;
+  flex-direction:column;
+  width:500rpx;
   overflow: hidden;
   border-radius: 25rpx;
-  box-shadow:  2px 3px 6px #bec4c4, 
-              -2px -3px 6px #ffffff;
+  border:#999 solid 1rpx;
+  /* background:#edeec9; */
+  /* box-shadow:  2px 3px 6px #bec4c4, 
+              -2px -3px 6px #ffffff; */
 }
 .list image{
-  width: 50%;
-  height: 100%;
-}
-.img_text{
-  display: flex;
-  flex-direction: column;
-  box-sizing: border-box;
-  padding: 80rpx 0;
-  width: calc(100% - 50% - 25rpx);
+  width: 100%;
+  /* border-radius: 25rpx; */
 }
 .img_text text{
-  display: block;
+  text-align:center;
+  box-sizing: border-box;
 }
 .img_text text:nth-child(1){
   color:#f31e21;
@@ -56,5 +72,23 @@ opacity: .3;
   font-size: 72rpx;
 }
 .img_text text:nth-child(2){
-  font-weight: bold;
+  font-weight: 200;
+  padding:20rpx 0;
+  letter-spacing: 2rpx;
+}
+.next{
+  margin-top: 20rpx;
+  width: 100rpx;
+  height: 100rpx;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: #333;
+  float:right;
+  margin-right:30rpx;
+}
+.icon{
+  color: #fff;
+  vertical-align: middle;
 }
