--- a/pages/comment/comment.wxss
+++ b/pages/comment/comment.wxss
@@ -1,8 +1,46 @@
 /* pages/conmment/comment.wxss */
 .comments{
+  position: relative;
+  min-height:100% ;
+  background:#3a0ca3;
   box-sizing: border-box;
-  padding: 0 30rpx;
-  margin-bottom: 30rpx;
+  padding: 30rpx;
+  z-index: 3;
+}
+.comments .bg{
+  position: absolute;
+  top:-118rpx;
+  left:-292rpx;
+  z-index:2;
+}
+.shop{
+  position: relative;
+  height:250rpx;
+  border-radius: 25rpx;
+  /* background-image: linear-gradient( 292.9deg,  rgba(254,105,241,1) 28.8%, rgba(182,44,248,1) 70.4% );*/
+  border:#333 solid 1rpx;
+}
+/* .shop .left{
+  position: absolute;
+  left: 0;
+  top:0;
+  width: 20%;
+  height: 100%;
+  background:#333;
+  border-radius: 25rpx;
+  color: #fff;
+} */
+.shop .left text{
+  transform: rotateY(90deg);
+}
+.shop>.right{
+  position: absolute;
+  right: 0;
+  top:0;
+  width: 80%;
+  height: 100%;
+  border:#333 solid 1rpx;
+  border-radius: 25rpx;
 }
 .comments_top{
   display: flex;
@@ -19,18 +57,27 @@
   box-sizing: border-box;
   padding: 0 30rpx;
 }
-.button{
+/* .button{
   color: #fff;
   text-align: center;
   margin-top: 20rpx;
   height: 100rpx;
   line-height: 100rpx;
   background-image:linear-gradient(to right,#ec3f42,#e00b52);
-}
-.comment_user{
+} */
+.comments_user{
+  position: relative;
+  z-index: 3;
+  width: 100%;
+  height: 886rpx;
   margin-top: 20rpx;
+  /* background: #fff; */
+background: #fff;
   box-sizing: border-box;
-  padding: 0 30rpx;
+  padding:0 30rpx;
+  border-radius: 50rpx;
+  overflow:auto;
+  overflow-y:scroll;
 }
 .comment_list{
   margin-top: 30rpx;
@@ -38,21 +85,30 @@
 .user{
   display: flex;
   align-items:center;
+  letter-spacing: 5rpx;
+  font-size: 32rpx;
+  font-weight: 200;
 }
 .user image{
   width: 100rpx;
   height: 100rpx;
-  border-radius:50%;
+  border-radius:25rpx;
 }
 .user text{
   margin-left:20rpx;
 }
 .comments_text{
   margin-top: 20rpx;
+  letter-spacing: 5rpx;
+  font-size: 32rpx;
+  font-weight: 200;
 }
 .comment_time{
   color: #999;
   text-align: right;
+  font-size: 24rpx;
+  font-weight: 200;
+  letter-spacing: 5rpx;
 }
 .comment_rate{
   width: 100%;
@@ -60,8 +116,9 @@
 }
 .comments_img image{
   width: 100%;
-  height: 400rpx;
+  height: 200rpx;
   margin-top: 20rpx;
+  border-radius: 25rpx;
 }
 .reply{
   color: #999;
@@ -82,4 +139,57 @@
 }
 .update_img{
   margin-top: 30rpx;
+}
+.comment_input{
+  position: relative;
+  background:#fff;
+  width: 100%;
+  /* height: 250rpx; */
+  box-sizing: border-box;
+  padding-right: 30rpx;
+}
+.comment_input .left{
+  display: flex;
+  flex-direction: column;
+}
+.comment_input .button{
+  width: 100%;
+  height: 250rpx;
+  background:#3a0ca3;
+  /* border-radius: 25rpx; */
+  border-top-right-radius: 25rpx;
+  /* border-bottom-right-radius: 25rpx; */
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.shop_name{
+  color: #fff;
+  font-size: 48rpx;
+  font-weight: 200;
+  letter-spacing: 10rpx;
+  margin:0 20rpx;
+}
+.comment_input .button_input{
+  background: #fece2f;
+  color:#ef233c;
+  letter-spacing: 10rpx;
+  font-size: 40rpx;
+  font-weight: 500;
+  padding: 10rpx 20rpx;
+  margin: 20rpx;
+  height: 70rpx;
+  border-radius: 25rpx;
+}
+.comment_input .num{
+  width: 150rpx;
+  height: 150rpx;
+  border-radius: 50%;
+  border:6rpx solid #ffd166;
+  color: #fff;
+  text-align:center;
+  line-height: 150rpx;
+  font-size: 80rpx;
+  font-weight: 200;
+  margin: 20rpx;
 }
