--- a/pages/search/search.wxml
+++ b/pages/search/search.wxml
@@ -17,27 +17,38 @@
   <view class="histroy_words">
     <text wx:for="{{history}}" wx:key="index">{{item}}</text>
   </view>
-  <view class="banner">
+  <!-- <view class="banner">
     <image src="https://c-xt.gitee.io/msfse/i/banner2.png" alt="" class="banner_img"></image>
+  </view> -->
+  <view class="search_info" >
+    <view class="search_info_bg" style="border-radius:{{bgrandom}};background-image:{{bgc}};transform: scale({{S}});"></view>
+    <text class="title">搜索推荐</text>
+    <view class="search_list">
+      <view class="search_often">
+        <van-icon name="fire" class="icon"/>
+        <text>烧烤</text>
+      </view>
+      <view class="search_often">
+        <van-icon name="hot-sale" class="icon"/>
+        <text>烧烤</text>
+      </view>
+      <view class="search_often">
+        <van-icon name="new-arrival" class="icon"/>
+        <text>烧烤</text>
+      </view>
+      <view class="search_often">
+        <van-icon name="new-arrival" class="icon"/>
+        <text>烧烤</text>
+      </view>
+      <view class="search_often">
+        <van-icon name="hot" class="icon"/>
+        <text>烧烤</text>
+      </view>
+      <view class="search_often">
+        <van-icon name="label" class="icon"/>
+        <text>烧烤</text>
+      </view>
+    </view>
   </view>
-  <view class="search_list">
-    <view class="search_often">
-      <text>烧烤</text>
-    </view>
-    <view class="search_often">
-      <text>烧烤</text>
-    </view>
-    <view class="search_often">
-      <text>烧烤</text>
-    </view>
-    <view class="search_often">
-      <text>烧烤</text>
-    </view>
-    <view class="search_often">
-      <text>烧烤</text>
-    </view>
-    <view class="search_often">
-      <text>烧烤</text>
-    </view>
-  </view>
+  <view class="square"></view>
 </view>
