--- a/pages/shopinfo/shopinfo.wxss
+++ b/pages/shopinfo/shopinfo.wxss
@@ -2,30 +2,41 @@
 .shopinfo{
   width: 100%;
   margin-bottom: 30rpx;
+  box-sizing: border-box;
+  padding: 10rpx 30rpx 0rpx 30rpx;
+}
+text{
+  display: inline-block;
 }
 .shop_img{
-  width: 100%;
+  border-radius: 25rpx;
+  width: calc(100% - 1rpx);
+  margin-top:1rpx;
   height: 200rpx;
 }
 
 .imformation view text{
-  display: block;
-  width: 100%;
+  /* width: 100%; */
   text-indent: 30rpx;
 }
-.imformation view>text:nth-child(1){
-  font-weight: 500;
-}
-.imformation view>text:nth-child(2){
-  color: #666;
+.imformation view>text{
+  font-weight: 200;
+  letter-spacing: 5rpx;
 }
 .name{
-  color: #fff;
-  font-size: 72rpx ;
+  color: #ec3f42;
+  font-size: 48rpx;
+  line-height: 100rpx;
+  height: 100rpx;
+  font-weight: 200;
   box-sizing: border-box;
   padding:0 30rpx;
   letter-spacing: 10rpx;
-  background-image:linear-gradient(to right,#ec3f42,#e00b52) ;
+  border-top: none;
+  text-align:center;
+  /* background-image:linear-gradient(to right,#ec3f42,#e00b52) ; */
+  border-bottom-left-radius: 25rpx;
+  border-bottom-right-radius: 25rpx;
 }
 
 .time{
@@ -34,17 +45,46 @@
   width: 100%;
 }
 .distance{
+  position: relative;
   box-sizing: border-box;
   padding: 30rpx 0;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
+  flex-direction: column;
+  background:#3a0ca3;
+  border-radius: 25rpx;
+  height: 250rpx;
+  overflow: hidden;
+}
+.distance image{
+  height: 450rpx;
+  position: absolute;
+  top: -50rpx;
+  left: -250rpx;
+} 
+.distance view{
+  text-align: center;
+}
+.distance .top{
+  font-size:32rpx;
+  color: #fff;
+  font-weight: 200;
+
+}
+.distance .bottom{
+  margin-top: 20rpx;
+  font-size: 48rpx;
+  color:#ffd166 !important;
 }
 .address{
   box-sizing: border-box;
   padding: 30rpx 0;
   display: flex;
-  justify-content: space-between;
-  align-items:center;
+  flex-direction: column;
+  /* align-items:center; */
+  /* background: #81b29a; */
+  /* color: #3a0ca3; */
+  border-radius: 25rpx;
 }
 .tool{
   width: 30%;
@@ -60,28 +100,38 @@
   display: flex;
   justify-content: space-between;
 }
-.comments::before{
+/* .comments::before{
   display: block;
   content: '';
   width: 100%;
   height: 20rpx;
   background:#eee;
-}
+} */
 .report{
+  letter-spacing: 5rpx;
+  font-weight: 200;
   text-indent: 30rpx;
   text-align: center;
+  /* background: #003049; */
+  background-image:linear-gradient(to right,#ec3f42,#e00b52) ;
+
 }
-.comments::after{
+/* .comments::after{
   display: block;
   content: '';
   width: 100%;
   height: 20rpx;
   background:#eee;
-}
+} */
 .report text{
   line-height: 100rpx;
   height: 100rpx;
-  color: #ec3f42;
+  color: #fff
+}
+.comments{
+  border:#ec3f42 solid 1rpx;
+  border-radius:25rpx;
+  /* border-right:none; */
 }
 .comments .top{
   line-height: 100rpx;
@@ -91,16 +141,36 @@
   justify-content: space-between;
 }
 .top text{
+  letter-spacing: 5rpx;
   box-sizing: border-box;
   padding:0 30rpx;
 }
 .top .more{
-  color: #ec3f42;
+  color: #fff;
+  letter-spacing: 5rpx;
+  font-weight: 200;
+  border-top-right-radius: 25rpx;
+  border-bottom-left-radius: 25rpx;
+  background: #f25c54;
 }
 .comment_user{
+  width: calc(100% - 1rpx);
+  margin-top: -1rpx;
+  position: relative;
   margin-top: 20rpx;
   box-sizing: border-box;
-  padding: 0 30rpx;
+  padding: 10rpx 30rpx;
+  border-radius: 25rpx;
+  background:#ffdd00;
+  color: #3a0ca3;
+  letter-spacing: 5rpx;
+  overflow: hidden;
+}
+.comment_user .bg{
+  height: 100%;
+  position: absolute;
+  bottom:-50%;
+  left:-70rpx;
 }
 .user{
   display: flex;
@@ -111,10 +181,12 @@
   height: 100rpx;
   border-radius:50%;
 }
-.user text{
+/* .user text{
   margin-left:20rpx;
-}
+} */
 .comment_user .comments_text{
+  font-size: 32rpx;
+  /* font-weight: 200; */
   display: flex;
   justify-content: space-between;
   margin: 30rpx auto;
