--- a/pages/comment/comment.wxml
+++ b/pages/comment/comment.wxml
@@ -11,25 +11,37 @@
     <!-- <image src="../../images/car.png"></image> -->
   <!-- </view> -->
   <view class="comments_user">
-    <view wx:for="{{CommentData}}" class="comment_list" wx:key="index">
-      <view class="comments_top">
+    <view class="comment_list" wx:for="{{CommentData}}" wx:key="index">
+      <view class="left comment_time">
+        <text>{{item.created_at[0]}}</text>
+        <text>{{item.created_at[1]}}</text>
+      </view>
+      <view class="right">
+        <!-- article -->
+        <view class="comments_text">
+          <text>{{item.text}}</text>
+        </view>
+        <!-- image -->
+        <view class="comments_img" wx:if="{{ item.imgs != null }}">
+          <image src="{{item.imgs}}" mode="aspectFill" ></image>
+        </view>
+        <!-- rate -->
+        <view class="comment_rate">
+          <van-rate count="5" value="{{item.stars}}" void-color="#ec3f42"  readonly="true" size="38rpx"/>
+        </view>
+        <!-- user_img -->
+        <view class="comments_top">
           <view class="user">
             <image src="https://c-xt.gitee.io/msfse/i/food2.png"></image>
             <text>地摊君</text>
           </view>
+        </view>
       </view>
-      <view class="comments_text">
-        <text>{{item.text}}</text>
-      </view>
-      <view class="comments_img" wx:if="{{ item.imgs != null }}">
-        <image src="{{item.imgs}}" mode="aspectFill" ></image>
-      </view>
-      <view class="comment_rate">
-        <van-rate count="5" value="{{item.stars}}" void-color="#ec3f42"  readonly="true"/>
-      </view>
-      <view class="comment_time">
+      
+      
+      <!-- <view class="comment_time">
         <text>{{item.created_at}}</text>
-      </view>
+      </view> -->
       <!-- <view class="reply">
         <van-icon name="chat"/>
         <van-icon name="chat-o" class="icon"/>
@@ -41,30 +53,22 @@
   </view>
 </view>
 <view class="comment_input">
-     <!-- <image src="../../images/bg1.png" mode="heightFix"></image>  -->
-     <view class="button">
-       <view class="left">
-         <text class="shop_name">章鱼小丸子</text>
-        <text class="button_input" style="display:inline;">参与评论+</text>
-       </view>
-       <view class="num">
-        <text>{{CommentData.length}}</text>
-      </view>
-     </view>
-  </view>
+  <image src="../../images/vector-creator.png" class="bg1"></image>
+  <text class="button_input" bindtap="showPopup">参与评论</text>
+</view>
   <van-popup
     show="{{ show }}"
     closeable
     close-icon="close"
     position="bottom"
-    custom-style="height: 20%"
+    custom-style="height: 950rpx"
     bind:close="onClose"
   />
-  <!-- <view class="user_comment">
-      <textarea cols="30" rows="10" placeholder="请输入评论内容" class="text" bindinput="getwords"></textarea>
+  <view class="user_comment" wx:if="{{ show2 }}">
+      <textarea cols="30" rows="10" placeholder="请输入评论内容" class="text" bindinput="getwords" placeholder-class="placeholder"></textarea>
       <view class="update_img">
         <van-uploader file-list="{{ fileList }}" bind:after-read="afterRead"/>
       </view>
       <van-rate count="5" value="{{ stars }}" bind:change="onChange"/>
       <view class="button" bindtap="addComment">提交</view>
-  </view> -->
+  </view>
