--- a/pages/my/my.wxss
+++ b/pages/my/my.wxss
@@ -4,21 +4,41 @@
 
 }
 .apply{
-  float: right;
-  color: #ec3f42;
-  margin-right: 30rpx;
+  position: absolute;
+  color: #fff;
+  right: 30rpx;
+  letter-spacing: 5rpx;
+  font-weight: 200;
+  top: 30rpx;
+  z-index: 3;
 }
 .head{
+  position: relative;
   width: 100%;
   height: 460rpx;
-  box-sizing: border-box;
-  padding: 30rpx 0;
+  /* background:#ec3f42; */
+  background-image:linear-gradient(to right,#ff6000,#ff4800) ;
+  background-filter:blur(2rpx);
+  display: grid;
+  place-content: center;
+  z-index: 2;
 }
+/* .head .img:before{
+  position: absolute;
+  display: block;
+  width: 230rpx;
+  height: 230rpx;
+  z-index: 2;
+  background:#fff;
+} */
 .head image{
-  width: 80%;
-  height: 100%;
-  border-top-right-radius: 48%;
-  border-bottom-right-radius: 48%;
+  position: absolute;
+  width: 200rpx;
+  height: 200rpx;
+  top:30%;
+  border-radius: 50%;
+  border:6rpx solid #fff;
+  z-index: 3;
 }
 .user_img{
   position: absolute;
@@ -35,18 +55,20 @@
 .user_name{
   padding: 0 30rpx;
   box-sizing: border-box;
-  font-size: 56rpx;
-  font-weight: bold;
+  font-size: 42rpx;
+  font-weight: 500;
+  color: #fff;
+  text-align: center;
+  margin-top: 30rpx;
 }
 .user_name text:last-of-type{
   display: block;
   font-size: 30rpx;
-  color: #ec3f42;
+  color: #fff;
 }
 
 .content{
   width: 100%;
-  margin-top: 30rpx;
 }
 .imformation{
   width:100%;
