--- a/pages/news/news.wxss
+++ b/pages/news/news.wxss
@@ -1,9 +1,10 @@
 /* pages/news/news.wxss */
 .news{
   width: 100%;
-  box-sizing: border-box;
-  padding: 0 30rpx;
+  /* box-sizing: border-box;
+  padding: 0 30rpx; */
 }
+
 .news_list{
   width: 100%;
   margin:30rpx 0;
@@ -11,23 +12,23 @@
   padding:30rpx;
   background:#fdfafa;
   border-radius: 25rpx;
-  box-shadow:  3px 3px 9px #bec4c4, 
-              -3px -3px 9px #e6e5e5;
+  /* border:1rpx solid #f25c54; */
+  border:1rpx solid #ccc;
 }
 .title{
   display: block;
   width: 100%;
-  font-weight: bold;
+  font-weight: 500;
   font-size: 42rpx;
   margin-bottom: 30rpx;
+  letter-spacing: 5rpx;
 }
 .img{
   width: 100%;
-  height: 300rpx;
 }
 .img image{
   width: 100%;
-  height: 100%;
+  height: 300rpx;
   border-radius: 5rpx;
 }
 .source{
@@ -36,4 +37,5 @@
   display: flex;
   justify-content: space-between;
   margin-top: 30rpx;
+  letter-spacing: 5rpx;
 }
