--- a/pages/newslist/newslist.wxss
+++ b/pages/newslist/newslist.wxss
@@ -11,13 +11,16 @@
 }
 .source{
   font-size: 32rpx;
-  color: #999;
+  color: #f25c54;
   display: flex;
   flex-direction: column;
   margin: 30rpx auto;
+  letter-spacing: 5rpx;
 }
 .newlist image{
   width: 100%;
+  border-radius: 25rpx;
+  margin: 20rpx auto;
 }
 .icon{
   margin-top: 30rpx;
@@ -33,4 +36,10 @@
 .icon_reading,
 .icon_likes{
   vertical-align: middle;
+}
+.article{
+  font-size: 32rpx;
+  font-weight: 200;
+  letter-spacing: 2rpx;
+  line-height: 50rpx;
 }
